package com.example.homework.Abstract_factory_pattern;

// 抽象产品 - 可乐
interface Cola {
    void pour();
}