package com.example.homework.Abstract_factory_pattern;

// 抽象工厂
interface FastFoodFactory {
    Hamburg createHamburg();
    Cola createCola();
}