package com.example.homework.Abstract_factory_pattern;

// 抽象产品 - 汉堡
interface Hamburg {
    void prepare();
}